# claw-code-python

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/plans/: python_coding_agent_rebuild_924c9f6d.plan.md
claw_code_python/: agent_loop.py  llm_client.py  main.py  models.py  session.py  tool_registry.py  viewer.py
claw_code_python/tools/: __init__.py  base.py  bash.py  calculator.py  edit_file.py  glob_search.py  grep_search.py  read_file.py  write_file.py
plans/: python-coding-agent-rebuild.plan.md  python-coding-agent-rebuild.prd.md
tests/: conftest.py  test_calculator.py  test_file_tools.py  test_search_tools.py
