[project]
name = "claw-code-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
claw        = "claw_code_python.main:run"
claw-viewer = "claw_code_python.viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
